--- a/package.json
+++ b/package.json
@@ -16,19 +16,19 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
     "@reduxjs/toolkit": "^1.8.5",
-    "@signumjs/contracts": "^1.0.0-rc.32",
-    "@signumjs/core": "^1.0.0-rc.32",
-    "@signumjs/crypto": "^1.0.0-rc.32",
-    "@signumjs/http": "^1.0.0-rc.32",
-    "@signumjs/monitor": "^1.0.0-rc.32",
-    "@signumjs/util": "^1.0.0-rc.32",
-    "@signumjs/wallets": "^1.0.0-rc.32",
+    "@signumjs/contracts": "^1.0.0-rc.68",
+    "@signumjs/core": "^1.0.0-rc.68",
+    "@signumjs/crypto": "^1.0.0-rc.68",
+    "@signumjs/http": "^1.0.0-rc.68",
+    "@signumjs/monitor": "^1.0.0-rc.68",
+    "@signumjs/util": "^1.0.0-rc.68",
+    "@signumjs/wallets": "^1.0.0-rc.68",
     "clsx": "^1.2.1",
     "copy-to-clipboard": "^3.3.2",
     "date-fns": "^2.29.3",
     "hashicon": "^0.3.0",
     "lodash": "^4.17.21",
-    "next": "12.3.0",
+    "next": "^12.3.4",
     "nprogress": "^0.2.0",
     "react": "18.2.0",
     "react-device-detect": "^2.2.2",
