--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
     "@reduxjs/toolkit": "^1.8.5",
-    "@signumjs/contracts": "^1.0.0-rc.68",
-    "@signumjs/core": "^1.0.0-rc.68",
-    "@signumjs/crypto": "^1.0.0-rc.68",
-    "@signumjs/http": "^1.0.0-rc.68",
-    "@signumjs/monitor": "^1.0.0-rc.68",
-    "@signumjs/util": "^1.0.0-rc.68",
-    "@signumjs/wallets": "^1.0.0-rc.68",
+    "@signumjs/contracts": "^1.0.0-rc.70",
+    "@signumjs/core": "^1.0.0-rc.70",
+    "@signumjs/crypto": "^1.0.0-rc.70",
+    "@signumjs/http": "^1.0.0-rc.70",
+    "@signumjs/monitor": "^1.0.0-rc.70",
+    "@signumjs/standards": "^1.0.0-rc.70",
+    "@signumjs/util": "^1.0.0-rc.70",
+    "@signumjs/wallets": "^1.0.0-rc.70",
     "clsx": "^1.2.1",
     "copy-to-clipboard": "^3.3.2",
     "date-fns": "^2.29.3",
